--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
      <div class="profileContainer">
      
       <div class="message">
-          Hey!.Welcome to my personal website.I'm Jiwan Sapkota. I study computer engineering in Nepal.I made this webpage randomly trying to be familiar with html and css.Thanks for visiting the Website.
+          Hey!.Welcome to my personal website.I'm Jiwan Sapkota. I study Computer Engineering in Nepal. I made this webpage randomly trying to be familiar with html and css. Thanks for visiting the Website.
       </div>
        </div>  
       <div class="footer">
-          &copy;2019 Jiwan Sapkota.<a href="https://www.facebook.com/jiwan13/about?lst=100008866983656%3A100008866983656%3A1548774565">About me</a>.    
+          &copy;2019 Jiwan Sapkota. <a href="https://www.facebook.com/jiwan13/about?lst=100008866983656%3A100008866983656%3A1548774565">About me</a>.    
            </div>
      </div> 
 </body>
